# github-tuner

./: .gitignore  AUTO_FETCH_GUIDE.md  AUTO_FETCH_SUMMARY.md  Dockerfile  Example-.patch-content  Gemini-Reasearch.md  QUICKREF.md  README.md  RELEASE_NOTES_v1.0.0.md  demo_autofetch.py  pyproject.toml  requirements.txt  strategy.json  tactics.json  tune.bat  tune.sh
docs/: USER_MANIFESTO.md
src/: list_models.py  mission.json  strategy.json
src/scraper/: __init__.py  cli.py  discover.py
src/tuner/: __init__.py  ai_evolver.py  analytics.py  brain.py  cli.py  hunter.py  manager.py  menu.py  mission.py  mission_initializer.py  monitor.py  review_tui.py  slicer.py  storage.py  tactics.py  tui.py  workers.py
src/tuner/agent/: analysis.py  brain.py  core.py  memory.py  perception.py  tools.py  ui.py
tests/: test_discover.py  test_slicer.py  test_tactics.py  test_tuner.py  verify_enhanced.py
