[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-tuner"
version = "0.1.0"
description = "Autonomous, Hybrid-AI Repository Discovery Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "google-generativeai",
    "sentence-transformers",
    "numpy",
    "feedparser"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "pytest-asyncio>=0.20.0",
]

[project.scripts]
tune = "tuner.cli:app"
